--- a/css/abaut.css
+++ b/css/abaut.css
@@ -5,7 +5,7 @@
 }
 #abCont{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     display: flex;
     position: relative;
@@ -118,7 +118,7 @@ z-index: 10px;
 }
 .textAb{
     top: 100px;
-    width: 30%;
+    width: 35%;
     position: absolute;
     margin: 40px;
     font-size: 25px;
@@ -138,15 +138,23 @@ z-index: 10px;
   width: 200px;
   height: 200px;
   position: absolute;
-  left: 550px;
+  left: 700px;
   top: 100px;
+   opacity: 0; 
+  transition:3s ease-in-out;
+   transform: scale(0); 
+  
 }
+.comimg>img{
+  transform: rotateY(0deg) translateZ(0px);
+}
+
 #imgabut{
     width: 30%;
     height: 100px;
-
+    
     position: absolute;
-  
+  top: 580px;
     transform: translateX(-80%);
     transition: 1s ease-in-out;
 }
@@ -255,23 +263,25 @@ label {
   }
   .icon-bar a {
 
-  border-radius: 70%;
+  border-radius: 50%;
     text-align: center;
     padding: 20px;
     transition: all 0.3s ease;
     color: white;
     margin: 20px;
     font-size:40px;
+    transition:1s ease-in-out;
   }
   .icon-bar a:hover {
-    background-color: rgba(39, 38, 38, 0.295);
+    
+    background-color: brown;
 
   }
   
   .facebook {
     background: #3B5998;
     color: white;
-    width: 80px;
+    width: 90px;
     
   }
   
@@ -333,6 +343,9 @@ top: 680px;
     color: ivory;
     
 }
+.comimg{
+  display: none;
+}
 
   }
 @media screen and (max-width:1050px){
@@ -342,23 +355,19 @@ top: 680px;
         margin: 0;
         box-sizing: border-box;
     }
-    #abCont{
-      width: 768px;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      position: relative;
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-      left: 0;
-
-  }
     #contAbaut{
       width: 100%;
-      height: 220vh;
+      height: 250vh;
+      position: absolute;
+      overflow: hidden;
+      
+      display: flex;
+      
+      }
+    
+    #contAbaut{
+      width: 100%;
+      height: 120vh;
       display: flex;
        flex-direction: column;
        align-items: center;
@@ -367,7 +376,7 @@ top: 680px;
     }
     #imgabut{
       width: 30%;
-  top: 580px;
+      top: 490px;
       display: flex;
       justify-content: center;
   }
@@ -381,7 +390,7 @@ top: 680px;
     width:100%;
     position: sticky;
     display: flex;
-    top: 700px;
+    top: 620px;
     justify-content: center;
     text-align: center;
     } 
@@ -454,8 +463,7 @@ top: 680px;
     }
     .icon-bar{
       width: 100%;
-     left: 0%;
-  bottom: 100px;
+     left: 0%; bottom: 100px;
     display: flex;
  position: inherit;
   justify-content: space-around;
@@ -467,5 +475,41 @@ top: 680px;
    
   
   }
+  .comimg{
+    display: none;
+  }
    
+}
+@media screen and (max-width:650px){ 
+  #contAbaut{
+    width: 100%;
+    height: 250vh;
+    position: absolute;
+    overflow: hidden;
+    
+    display: flex;
+    
+    }
+  .blo{
+    width:100%;
+    position: sticky;
+    display: flex;
+    top: 960px;
+    justify-content: center;
+    text-align: center;
+    } 
+    #imgabut{
+      width: 30%;
+      top: 700px;
+      display: flex;
+      justify-content: center;
+  }
+  .textAb .p ,.p1{
+  
+    line-height: 40px;
+    letter-spacing:0px ;
+    color: rgb(253, 250, 245);
+   
+    
+}
 }
