--- a/css/hospitals.css
+++ b/css/hospitals.css
@@ -6,20 +6,20 @@
 }
 .contJson{
     width: 100%;
-    height: 100vh;
+    
     display: grid;
     grid-template-rows: 600px auto;
-   
+  background-color: rgba(104, 176, 248, 0.658);
    
 }
 .contHaus{
     
- 
+ background-color: rgba(104, 176, 248, 0.658);
 
-    padding: 50px;
+    padding: 55px;
     display: grid;
-    gap: 150px;
-    grid-template-columns: 30% 40%;
+    gap: 35px;
+    grid-template-columns: 35% 35% 20%;
 
     justify-content: center;
   
@@ -46,60 +46,134 @@
 		background-position: 0% 50%;
 	}
 }
+.res{
+
+    display: grid;
+   
+    grid-gap: 28px;
+    perspective: 800px;
+  
+  }
+  .mystyle {
+  display: grid;
+  
+    background-color:rgba(42, 85, 114, 0.932);
+  color:white;
+    box-shadow: 7px 10px 5px rgba(6, 57, 88, 0.664),-5px -5px  rgba(3, 54, 85, 0.534);
+  
+     list-style-type: none; 
+   padding: 20px;
+    font-size: 19px;
+    line-height: 25px;
+    transition: all 0.5s;
+    
+  }
+  .mystyle:hover{
+    transform: scale(1.1);
+    transform: perspective(500);
+   
+    background-blend-mode:multiply ;
+    transition: all 0.5s;
+  }
+  .mystyle a{
+    text-decoration: none;
+    color: rgba(248, 2, 137, 0.993);
+  }
+  .imNew{
+    width: 90%;
+    height: 40vh;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 20px;
+    
+  }
+  
 #output{
     display: grid;
-  grid-template-rows: auto;
-  grid-gap: 30px;
+  
+  grid-gap: 28px;
 
-box-shadow: 7px 7px 5px gray, -5px -5px 5px rgba(128, 128, 128, 0.979);
  
 }
 #output ul {
 
-    
-    background-color: rgb(235, 243, 252);
-    box-shadow: 7px 10px 5px rgb(168, 168, 168);
-    list-style-type: none;
+    display: grid;
   
+    background-color:rgba(42, 85, 114, 0.932);
+  color:white;
+    box-shadow: 7px 10px 5px rgba(6, 57, 88, 0.664),-5px -5px  rgba(3, 54, 85, 0.534);
+  
+     list-style-type: none; 
+   padding: 20px;
     font-size: 19px;
     line-height: 25px;
-   text-align: center;
-   padding: 10px;
+    transition: all 0.5s;
     
-}
-
-ul a{
-    text-decoration: none;
-    color: blue;
-}
-#nachrecht ul{
-    background-color: rgb(235, 243, 252);
-    box-shadow: 7px 10px 5px rgb(168, 168, 168);
-    list-style-type: none;
-  
-    font-size: 19px;
-    line-height: 25px;
-   text-align: center;
-   padding: 10px;
 }
 #nachrecht{
-
-    overflow: hidden;
-   
-    box-shadow: 7px 7px 5px gray, -5px -5px 5px rgba(128, 128, 128, 0.979);
+  
    display: grid;
-   grid-template-rows: auto;
-  grid-gap: 20px;
- 
-  /* background-color: rgb(169, 173, 238, 0.685); */
- 
+  
+  grid-gap: 28px; 
+}
+
+#nachrecht ul{
+    display: grid;
+  
+    background-color:rgba(42, 85, 114, 0.932);
+  color:white;
+    box-shadow: 7px 10px 5px rgba(6, 57, 88, 0.664),-5px -5px  rgba(3, 54, 85, 0.534);
+  
+     list-style-type: none; 
+   padding: 20px;
+    font-size: 19px;
+    line-height: 25px;
+    transition: all 0.5s;
+}
+#nachrecht ul:hover{
+    transform: scale(1.1);
+    transform: perspective(500);
+   
+    background-blend-mode:multiply ;
+    transition: all 0.5s;
 }
 .h2{
     text-align: center;
-    color: darkblue;
+    color: rgb(240, 240, 248);
 }
 .titl{
-    color: hotpink;
+    color: rgb(247, 147, 197);
     line-height: 30px;
     position: relative;
+}
+@media only screen and (max-width:1500px){ 
+
+.contHaus{
+        padding: 10px;
+        display: grid;
+        gap: 10px;
+        grid-template-columns: 50% 50%;
+    }
+}
+
+
+
+
+@media only screen and (max-width:850px){
+    .contHaus{
+    
+ 
+
+        padding: 50px;
+        display: grid;
+        gap: 150px;
+        grid-template-columns: 100%;
+    
+        justify-content: center;
+      
+    }
+
 }
