--- a/css/index1.css
+++ b/css/index1.css
@@ -9,17 +9,19 @@
   width: 100%;
     position: relative;
     background-image: linear-gradient(rgba(103, 129, 141, 0.274),rgba(130, 201, 214, 0.192)),url(/imeg/h2.jpg);
-    /* background-attachment: fixed; */
+    background-attachment: fixed;
     display: grid;
-    grid-template-rows: 615px auto ;
+    grid-template-rows: 720px auto ;
     background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
 }
+
 #sliderCont{
     position: relative;
     display: grid;
     overflow: hidden;   
+    background-attachment: fixed;
 }
 #img{
     position: absolute;
@@ -128,6 +130,7 @@ width: 55px;
       display: flex;
       transition: .5s;
      margin-top: 64px;
+     
   }
   .slid{
       width: 33.33%;
@@ -170,28 +173,35 @@ width: 55px;
   }
   h1{
       text-transform: uppercase;
-      font-size: 30px;
+      font-size: 40px;
       letter-spacing:6px ;
       word-spacing: 3px;
       color: rgb(253, 250, 245);
       line-height: 70px;
       transition: .5px;
       font-family: 'Oswald',sans-serif;
+     
   }
-  p{
+  .p{
       text-transform: uppercase;
       line-height: 40px;
+      font-size: 25px;
       letter-spacing:3px ;
       color: rgb(253, 250, 245);
       font-family: 'Oswald',sans-serif;
   }
   .mar{
-    color: white;
-    font-size: 18px;
+    color: rgb(57, 63, 119);
+    font-size: 21px;
+    font-weight: bold;
     position: relative;
     width: 100%;
     height: 20px;
     
+  }
+  a{
+    text-decoration: initial;
+    color: rgb(245, 77, 77);
   }
   /* //////////// */
 #imeges{
@@ -206,13 +216,13 @@ width: 55px;
 
 /* 777777 */
 #cont1{
-   background-color:#e4e7eb;
+   background-color:rgba(6, 57, 88, 0.918);
     display: grid;
 }
 #txt{
     display: grid;
     grid-template-columns:50% 50%;
-    background-color: #708090;
+    background-color: rgba(6, 57, 88, 0.918);
     grid-column-gap: 20px;
     position: relative;
    overflow: hidden;
@@ -220,9 +230,12 @@ width: 55px;
     color: rgb(248, 237, 237);
 }
 #sprech{
-  margin: 20px auto;
+  margin: 25px 25px;
+  line-height: 35px;
   display: grid;
- 
+ font-size: 20px;
+ letter-spacing: 2px;
+word-spacing: 5px;
 }
 #mapss{
  
@@ -442,7 +455,7 @@ background-color: rgba(0, 0, 0, 0.116);
  grid-column-gap: 20px;
   position: relative;
  overflow: hidden;
-background-color: #e4e7eb;
+background-color: rgba(6, 57, 88, 0.918);
 
 
 }
@@ -554,7 +567,7 @@ background-color: #e4e7eb;
   position: relative;
  overflow: hidden;
      position: relative;
-      background-color: rgb(227, 231, 241);
+      background-color: rgba(6, 57, 88, 0.918);
       
   }
   
@@ -562,15 +575,18 @@ background-color: #e4e7eb;
   #cont4{
     grid-template-columns: 50% 50%;
     display: grid;
-    background-color: rgb(227, 231, 241);
+    background-color: rgba(6, 57, 88, 0.918);
    justify-content: center;
    top: 0px;
 position: relative;
 
   }
   .text4{
-    font-size: 18px;
- margin: 15px 30px;
+    
+    margin: 30px 30px;
+   font-size: 22px;
+    display: grid;
+  color: rgb(192, 184, 184);
     letter-spacing: 1px;
     line-height: 30px;
   }
@@ -616,7 +632,7 @@ position: relative;
   #cont5{
    
     display: grid;
-    background-color: rgb(227, 231, 241);
+    background-color: rgba(6, 57, 88, 0.918);
   
    
   
@@ -739,11 +755,66 @@ z-index: 10px;
 }
 
 /* &&&&&&&&&&&&&&&//////////////// */
-@media only screen and (max-width:1025px){
+@media only screen and (max-width:1250px){
+  #img1 {
+    
+    
+    display: flex;
+     flex-direction: column;
+       align-items: center;
+    perspective: 800px; 
+ overflow: hidden;
+ 
+ } 
+ .hov{
+  width: 46%;
+  height: 250px;
+ 
+  display: block;
+  margin: auto;
+}
+#im1{
+  right: 20px; 
+  top: 20px; 
+  position: absolute;
+}
+#im2{
+  left: 20px; 
+  top: 20px; 
+  position: absolute;
+}   
+#im3{
+  right: 20px;
+  top: 290px;
+  position: absolute;
+}  
+#im4{
+   left: 20px;
+  top: 290px;
+  position: absolute;
+}  
+#im5{
+  left: 300px;
+  top: 560px;
+  position: absolute;
+}  
+    }
+    @media only screen and (max-width:1725px){
+      #imeges{
+        display: grid;
+        
+        grid-template-rows: 600px 850px 600px 600px 600px 420px;
+       padding: 0;
+       
+    }
+    }
+
+
+@media only screen and (max-width:1050px){
   #imeges{
     display: grid;
     
-    grid-template-rows: 600px 850px 1000px 850px 650px 420px;
+    grid-template-rows: 700px 850px 1000px 850px 800px 420px;
    padding: 0;
    
 }
@@ -789,11 +860,43 @@ z-index: 10px;
   top: 560px;
   position: absolute;
 }  
+#cont2{  
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 2px; 
+
+}
+.slideshow-container,.slideshow-container1 {
+  width: 90%;
+  height: 400px;
+  margin: auto;
+   }
+#cont3{
+
+   
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 2px; 
+
+}
+#cont4{
+
+   
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 2px; 
+
+}
+.sliderImg4 {
+  width: 90%;
+  height: 400px;
+  margin: auto; 
+   }
 }
 
 
 
-@media only screen and (max-width:850px){
+@media only screen and (max-width:880px){
 
 body{
   padding: 0;
@@ -853,18 +956,18 @@ nav{
         #imeges{
           display: grid;
           
-          grid-template-rows: 600px 1400px 1000px 850px 650px 420px;
+          grid-template-rows: 750px 1400px 1000px 850px 650px 420px;
          padding: 0;
          
       }
       #txt{
         display: grid;
         grid-template-columns:100%;
-   
+  
     }
     #sprech{
       width: 90%;
-     height: 330px;
+     height: 300px;
      margin: 10px auto;
      padding-right: 30px;
      display: grid;
@@ -873,7 +976,7 @@ nav{
     #map{
       display: grid;
       width: 80%;
-      height: 200px;
+      height: 250px;
     
     right: 20px;
      position: relative;
@@ -939,11 +1042,6 @@ nav{
       .slideshow-container,.slideshow-container1 {
         width: 90%;
         height: 300px;
-       
-      
-        
-      
-
          }
          #cont3{
           display: grid;
