--- a/css/index1.css
+++ b/css/index1.css
@@ -8,7 +8,7 @@
 #container{
   width: 100%;
     position: relative;
-    background-image: linear-gradient(rgba(103, 129, 141, 0.274),rgba(130, 201, 214, 0.192)),url(/imeg/h2.jpg);
+    background-image: linear-gradient(rgba(103, 129, 141, 0.274),rgba(130, 201, 214, 0.192)),url(../imeg/h2.jpg);
     background-attachment: fixed;
     display: grid;
     grid-template-rows: 720px auto ;
