--- a/css/abaut.css
+++ b/css/abaut.css
@@ -138,7 +138,7 @@ z-index: 10px;
   width: 200px;
   height: 200px;
   position: absolute;
-  left: 700px;
+  left: 37%;
   top: 100px;
    opacity: 0; 
   transition:3s ease-in-out;
@@ -312,7 +312,7 @@ label {
 padding-top:12px ;
       border-radius: 50%;
   } */
-  @media screen and (max-width:1450px){
+  @media screen and (max-width:1350px){
 .textAb{
   width: 40%;
 }
