--- a/css/abaut.css
+++ b/css/abaut.css
@@ -128,7 +128,7 @@ z-index: 10px;
 }
 .textAb .p ,.p1{
   
-      line-height: 40px;
+      line-height: 33px;
       letter-spacing:3px ;
       color: rgb(253, 250, 245);
      
@@ -169,7 +169,7 @@ z-index: 10px;
     max-width: 400px;
   
     padding: 30px;
-   right: 7%;
+   right: 1%;
    top: 120px;
     color:rgb(241, 233, 233);
     border-radius: 20px;
@@ -312,14 +312,66 @@ label {
 padding-top:12px ;
       border-radius: 50%;
   } */
-  @media screen and (max-width:1350px){
-.textAb{
-  width: 40%;
+  @media screen and (max-width:1200px){
+
+    #abCont{
+      width: 100%;
+      height: 200vh;
+      overflow: hidden;
+      display: flex;
+      position: relative;
+  }
+  #contAbaut{
+    width: 100%;
+    height: 150vh;
+   
+    overflow: hidden;
+    
+    display: flex;
+    
+    }
+    #imgabut{
+      width: 30%;
+      top: 710px;
+      display: flex;
+      justify-content: center;
+  }
+  }
+
+
+  @media screen and (max-width:1100px){
+    #abCont{
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      position: relative;
+  }
+  #contAbaut{
+    width: 100%;
+    height: 100vh;
+   
+    overflow: hidden;
+    
+    display: flex;
+    
+    }
+    .comimg{
+      display: none;
+    }
+
+.textAb{ 
+  width: 35%;
+  position: absolute;
+  margin: 10px;
+  font-size: 18px;
+  
 }
+
 .icon-bar{
   width: 100%;
- left:52%;
-bottom: 50px;
+ left:42%;
+bottom: 70px;
 display: flex;
 position: inherit;
 justify-content: space-around;
@@ -333,7 +385,7 @@ padding: 10px;
 }
 #imgabut{
   width: 30%;
-top: 680px;
+top: 720px;
   display: flex;
   justify-content: center;
 }
@@ -348,7 +400,7 @@ top: 680px;
 }
 
   }
-@media screen and (max-width:1050px){
+@media screen and (max-width:850px){
     body{
         background-color: slategray;
         padding: 0;
@@ -357,8 +409,8 @@ top: 680px;
     }
     #contAbaut{
       width: 100%;
-      height: 250vh;
-      position: absolute;
+      height: 150vh;
+     
       overflow: hidden;
       
       display: flex;
@@ -376,7 +428,7 @@ top: 680px;
     }
     #imgabut{
       width: 30%;
-      top: 490px;
+      top: 350px;
       display: flex;
       justify-content: center;
   }
@@ -390,7 +442,7 @@ top: 680px;
     width:100%;
     position: sticky;
     display: flex;
-    top: 620px;
+    top: 520px;
     justify-content: center;
     text-align: center;
     } 
@@ -483,7 +535,7 @@ top: 680px;
 @media screen and (max-width:650px){ 
   #contAbaut{
     width: 100%;
-    height: 250vh;
+    height: 140vh;
     position: absolute;
     overflow: hidden;
     
@@ -494,13 +546,13 @@ top: 680px;
     width:100%;
     position: sticky;
     display: flex;
-    top: 960px;
+    top: 560px;
     justify-content: center;
     text-align: center;
     } 
     #imgabut{
       width: 30%;
-      top: 700px;
+      top: 400px;
       display: flex;
       justify-content: center;
   }
