--- a/css/hospitals.css
+++ b/css/hospitals.css
@@ -16,10 +16,10 @@
     
  background-color: rgba(104, 176, 248, 0.658);
 
-    padding: 55px;
+    padding: 3%;
     display: grid;
-    gap: 35px;
-    grid-template-columns: 35% 35% 20%;
+    gap: 20px;
+    grid-template-columns: auto auto auto;
 
     justify-content: center;
   
@@ -29,23 +29,13 @@
     clip-path: polygon(0 0, 100% 0%, 100% 80%, 0% 100%);
     margin: 10px;
     background: url(../imeg/Rathaus5.jpg) no-repeat center/cover; 
-    /* background: linear-gradient(-45deg, #ee7652b4, #e73c7ea2, #23a5d5a6, #23d5ab2f); */
 	background-size: 100% 100%;
 	animation: gradient 15s ease infinite;
     
     background-attachment: fixed;
 }
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
+
+
 .res{
 
     display: grid;
@@ -149,12 +139,18 @@
     line-height: 30px;
     position: relative;
 }
- @media only screen and (max-width:1200px){ 
-
+ @media only screen and (max-width:900px){ 
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .contHaus{
-        padding: 10px;
+  width: 95%;
+      margin: auto;
+      
         display: grid;
-        gap: 10px;
+        gap: 20px;
         grid-template-columns: 50% 50%;
     }
 } 
@@ -162,16 +158,15 @@
 
 
 
-@media only screen and (max-width:850px){
+@media only screen and (max-width:750px){
     .contHaus{
     
  
-
-        padding: 50px;
+width: 90%;
         display: grid;
-        gap: 150px;
+        gap: 50px;
         grid-template-columns: 100%;
-    
+    align-items: center;
         justify-content: center;
       
     }
