--- a/css/index1.css
+++ b/css/index1.css
@@ -294,12 +294,7 @@ display: grid;
     transition: 1s;
     position: absolute;
  }
- #im1{
-  right: 60px;
-  top: 50px;
  
-    position: absolute;
- }
  .model,.model1{
      position: fixed;
      top: 0;
@@ -398,24 +393,30 @@ display: grid;
      letter-spacing: 2px;
      line-height: 30px;
  }
+ #im1{
+  right: 3%;
+  top: 50px;
+ 
+    position: absolute;
+ }
  
  #im2{
-    left: 60px; 
+    left: 3%; 
     top: 50px; 
     position: absolute;
 }   
   #im3{
-    right: 250px;
+    right: 15%;
     top: 175px;
     position: absolute;
 }  
  #im4{
-     left: 250px;
+     left: 15%;
     top: 175px;
     position: absolute;
 }  
  #im5{
-    left: 650px;
+    left: 36%;
     top: 300px;
     position: absolute;
 }  
@@ -755,7 +756,14 @@ z-index: 10px;
 }
 
 /* &&&&&&&&&&&&&&&//////////////// */
-@media only screen and (max-width:1250px){
+@media only screen and (max-width:1100px){
+  #imeges{
+    display: grid;
+    
+    grid-template-rows: 700px 850px 1000px 850px 800px 420px;
+   padding: 0;
+   
+}
   #img1 {
     
     
@@ -802,7 +810,7 @@ z-index: 10px;
    
 
 
-@media only screen and (max-width:1050px){
+@media only screen and (max-width:850px){
   #imeges{
     display: grid;
     
@@ -888,7 +896,7 @@ z-index: 10px;
 
 
 
-@media only screen and (max-width:880px){
+@media only screen and (max-width:750px){
 
 body{
   padding: 0;
@@ -916,6 +924,15 @@ nav{
       nav>ul a{
         padding: 20px;
         position: relative;
+      }
+      .text4{
+    
+        margin: 10px 10px;
+       font-size: 16px;
+        display: grid;
+      color: rgb(192, 184, 184);
+        letter-spacing: 1px;
+        line-height: 25px;
       }
   
    #burger{
@@ -948,7 +965,7 @@ nav{
         #imeges{
           display: grid;
           
-          grid-template-rows: 750px 1400px 1000px 850px 650px 420px;
+          grid-template-rows: 650px 1400px 890px 820px 650px 420px;
          padding: 0;
          
       }
@@ -958,57 +975,54 @@ nav{
   
     }
     #sprech{
-      width: 90%;
+     width: 90%;
      height: 300px;
      margin: 10px auto;
-     padding-right: 30px;
-     display: grid;
+     line-height: 25px;
+     font-size: 18px;
+     letter-spacing: 1px;
+     word-spacing: 5px;
      
     }
     #map{
       display: grid;
       width: 80%;
       height: 250px;
-    
-    right: 20px;
-     position: relative;
-
-    
+      right: 20px;
+      position: relative;
     }
     #img1 {
-  
-    
-     display: flex;
-      flex-direction: column;
-        align-items: center;
-     perspective: 800px; 
-  overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    perspective: 800px; 
+    overflow: hidden;
   
   } 
   #im1{
-    left: 0px; 
+    left: 3%; 
     top: 20px; 
-    position: absolute;
+   
   }
   #im2{
-    left: 0px; 
+    right: 3%; 
     top: 290px; 
-    position: absolute;
+   
 }   
   #im3{
-    left: 00px;
+    left: 3%;
     top: 560px;
-    position: absolute;
+  
 }  
  #im4{
-     left: 00px;
+     right:3%;
     top: 830px;
-    position: absolute;
+  
 }  
  #im5{
-    left: 0px;
+    left: 5%;
     top: 1100px;
-    position: absolute;
+   
 }  
     .hov{
 
@@ -1032,8 +1046,9 @@ nav{
       
       }
       .slideshow-container,.slideshow-container1 {
-        width: 90%;
+        width: 100%;
         height: 300px;
+        margin: auto;
          }
          #cont3{
           display: grid;
@@ -1044,7 +1059,7 @@ nav{
         .slideshow-container,.slideshow-container1 {
            height: 300px;
           display: grid;
-          left: 10px;
+       margin: auto;
            
            }
            #cont4{
