--- a/css/news.css
+++ b/css/news.css
@@ -38,7 +38,7 @@ display: grid;
 .navNews>ul{
   
   list-style-type: none;
-  margin: 0;
+  margin: 50px;
   padding: 0;
   align-items: center;
   display: flex;
