--- a/css/index1.css
+++ b/css/index1.css
@@ -11,7 +11,7 @@
     background-image: linear-gradient(rgba(103, 129, 141, 0.274),rgba(130, 201, 214, 0.192)),url(../imeg/h2.jpg);
     background-attachment: fixed;
     display: grid;
-    grid-template-rows: 720px auto ;
+    grid-template-rows: 750px auto ;
     background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
@@ -19,6 +19,7 @@
 
 #sliderCont{
     position: relative;
+  
     display: grid;
     overflow: hidden;   
     background-attachment: fixed;
@@ -91,7 +92,7 @@ width: 55px;
       display: flex;
       justify-content: center;
       position: relative;
-      
+      transition:1s ease-in-out;   
   }
   nav>ul>li{
       width: 100px;
@@ -124,7 +125,6 @@ width: 55px;
   }
   
   #slider{
-
       width: 400%;
       height: 98%;
       display: flex;
@@ -141,12 +141,9 @@ width: 55px;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-   
       position: relative;
       transition: .5s;
-    
       border-radius: 10px;
-      
   }
   #slid1{
       background-image: url(../imeg/img4.jpg);
@@ -191,8 +188,8 @@ width: 55px;
       font-family: 'Oswald',sans-serif;
   }
   .mar{
-    color: rgb(244, 245, 250);
-    font-size: 21px;
+    color: rgb(251, 250, 252);
+    font-size: 29px;
     font-weight: bold;
     position: relative;
     width: 100%;
@@ -206,12 +203,12 @@ width: 55px;
   /* //////////// */
 #imeges{
     display: grid;
-    
+
     grid-template-rows: 450px 690px 450px 450px 450px 400px;
-    grid-gap: 20px ;
+    grid-gap:40px ;
     position: relative;
     overflow: hidden;
-    padding: 10px;
+    padding:2% 4%;
 }
 
 /* 777777 */
@@ -313,10 +310,11 @@ display: grid;
      top: 20px;
      right: 40px;
      font-size: 40px;
-     color: wheat;
+     color: rgb(252, 15, 86);
      cursor: pointer;
      font-weight: bold;
  }
+ 
  .imgCont{
      width: 100%;
      height: 100vh;
@@ -333,52 +331,41 @@ display: grid;
   left: 2px;
   border-radius: 18px;
  }
- .somImg{
+ /* .somImg{
      width: 50%;
      height: 25%;
-    
-    
     margin: 15px;
     float: left;
     left: 2px;
- }
+ } */
 
- .som1{
+ /* .som1{
      display: grid;
     top: 10px;
     background-position: center;
     background-size: cover;
     position: absolute;
     border-radius: 8px;;
- }
+ } */
  .imege1{
    position: absolute;
+   width: 210px;
+   height: 130px;
+   border-radius: 8px;
+   top: 20px;
  }
 
  .somImg .som1:nth-child(1)>.imege1{
     left: 7px;
-    width: 210px;
-    height: 130px;
-    border-radius: 8px;
-
  }
  .somImg .som1:nth-child(2)>.imege1{
    left: 230px;
-   width: 210px;
-   height: 130px;
-   border-radius: 8px;
 }
 .somImg .som1:nth-child(3)>.imege1{
-    left: 455px;
-    width: 210px;
-    height: 130px;
-    border-radius: 8px;
+    left: 455px;  
 }
 .somImg .som1:nth-child(4)>.imege1{
   left: 680px;
-  width: 210px;
-  height: 130px;
-  border-radius: 8px;
 }
  
  .txt1{
@@ -479,7 +466,7 @@ background-color: rgba(6, 57, 88, 0.918);
     cursor: pointer;
     position: absolute;
     top: 40%;
-    background-color: rgba(32, 133, 2, 0.76);
+    background-color: rgba(201, 202, 200, 0.575);
     padding: 16px;
     color: white;
     font-weight: bold;
@@ -495,7 +482,10 @@ background-color: rgba(6, 57, 88, 0.918);
     left: 35px;
   }
   .prev:hover, .next:hover {
-    background-color: rgba(39, 175, 5, 0.925);
+    background-color: rgba(47, 48, 47, 0.925);
+  }
+  .prev1:hover, .next1:hover {
+    background-color: rgba(47, 48, 47, 0.925);
   }
   .text {
     color: #f2f2f2;
@@ -522,10 +512,10 @@ background-color: rgba(6, 57, 88, 0.918);
   }
   
   .active, .dot:hover {
-    background-color: #717171;
+    background-color: #3b3b3b;
   }
   .active, .dot1:hover {
-    background-color: #717171;
+    background-color: #3d3c3c;
   }
   .dot1{
     top: 400px;
@@ -645,9 +635,10 @@ position: relative;
     background-color: rgb(232, 233, 243);
     display: grid;
     transition:15s linear infinite ;
-      perspective: 800px;
+      perspective: 1000px;
       position: relative;
       margin: 100px auto;
+      right: 20%;
   }
   .flip{
  
@@ -657,16 +648,13 @@ position: relative;
       animation:rotate 30s linear infinite;   
       /* -webkit-transition: all 0.8s linear; */
      transform-style: preserve-3d;
-   left: 115px;
-    top: 60px;
+   
+   position: absolute;
+    
   }
-  .tran{
-    /* transform: rotateY(180deg) ; */
-     animation:rotate 20s linear infinite;   
-    transform-style: preserve-3d;
-  }
+  
   .imgFl{
-      width: 400px;
+      width: 500px;
       height: 200px;
     left: 1px;
    
@@ -675,22 +663,22 @@ position: relative;
   }
   .flip div{
     position: absolute;
-    width: 400px;
+    width: 500px;
     height: 400px;
     
   }
   .front{
-      transform: translateZ(200px);
+      transform: translateZ(250px);
      
   }
   .back{
-      transform: rotateY(180deg) translateZ(200px);
+      transform: rotateY(180deg) translateZ(250px);
       padding: 0;
    margin: 0;
       
   }
   .left{
-      transform: rotateY(-90deg) translateX(-200px);
+      transform: rotateY(-90deg) translateX(-250px);
      
      transform-origin: left;
      padding: 0;
@@ -698,26 +686,20 @@ position: relative;
   }
 
   .right{
-    transform: rotateY(90deg) translateX(200px);
+    transform: rotateY(90deg) translateX(250px);
   
    transform-origin: right;
    padding: 0;
    margin: 0;
 }
 .top{
-    transform: rotateX(-90deg) translateY(-200px);
+    transform: rotateX(-90deg) translateY(-250px);
      top: 10px;
    transform-origin: top;
    padding: 0;
    margin: 0;
 }
-.botton{
-    transform: rotateX(90deg) translateY(200px);
-     bottom: -210px;
-   transform-origin: bottom;
-   padding: 0;
-   margin: 0;
-}
+
 @keyframes rotate{
     from{ transform: rotateY(0);}
     to{transform: rotateY(360deg);}
@@ -735,7 +717,7 @@ position: relative;
 #burger{
   width: 50px;
   position: fixed;
-  right: 39px;
+  right: 26px;
   font-weight: bold;
   top: 20px;
  display: none;
@@ -756,7 +738,7 @@ z-index: 10px;
 }
 
 /* &&&&&&&&&&&&&&&//////////////// */
-@media only screen and (max-width:1100px){
+@media only screen and (max-width:1025px){
   #imeges{
     display: grid;
     
@@ -802,10 +784,15 @@ z-index: 10px;
   position: absolute;
 }  
 #im5{
-  left: 300px;
+  left: 27%;
   top: 560px;
   position: absolute;
 }  
+.mar{
+  font-size: 20px;
+  height: 25px;
+  bottom: 4px;
+  }
     }
    
 
@@ -856,7 +843,7 @@ z-index: 10px;
   position: absolute;
 }  
 #im5{
-  left: 300px;
+  left: 27%;
   top: 560px;
   position: absolute;
 }  
@@ -892,105 +879,117 @@ z-index: 10px;
   height: 400px;
   margin: auto; 
    }
+   .mar{
+    font-size: 20px;
+    height: 25px;
+    bottom: 4px;
+    }
 }
 
 
 
-@media only screen and (max-width:750px){
+@media only screen and (max-width:500px){
 
 body{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+#img{
+  position: absolute;
+  left: 29%;
+  top: 13px;
+}
+h1{ 
+  font-size: 25px;
+}
+.p{
+  line-height: 30px;
+  font-size: 18px;
+}
+.mar{
+font-size: 20px;
+height: 25px;
+bottom: 4px;
+}
+#txt{
+display: grid;
+grid-template-columns:100%;
+
+}
+#sprech{
+width: 95%;
+height: 300px;
+margin: 5px auto;
+line-height: 25px;
+font-size: 18px;
+letter-spacing: 1px;
+word-spacing: 5px;
+
+}
+#map{
+display: grid;
+width: 90%;
+height: 250px;
+position: relative;
+}
+
 nav{
   background-color:rgba(6, 57, 88, 0.932);
   height: 80px;
+  transition: 1ss ease-in-out;   
  
 }
-     nav>ul{
-      width: 29%;
-        top: 1PX;
-     left: 100%;
-         height: 50vh;
-         position: relative;
-        
-         display: flex;
-         flex-direction: column;
-           align-items: center;
-           transition: .5s ease-in-out;   
-       display: none;
-      }   
-      nav>ul a{
-        padding: 20px;
-        position: relative;
-      }
-      .text4{
+nav>ul{
+  width: 29%;  
+  left: 100%;
+  height: 30vh;
+  position: relative;    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition:1s ease-in-out;   
+  display: none;
+  }   
+    nav>ul li{
+    position: relative;
+    padding: 5px;
+    }
     
-        margin: 10px 10px;
-       font-size: 16px;
-        display: grid;
-      color: rgb(192, 184, 184);
-        letter-spacing: 1px;
-        line-height: 25px;
-      }
-  
-   #burger{
-      z-index: 1; 
-      position: fixed;
+    #burger{
+    z-index: 1; 
+    position: fixed;
+    display: block;
+    transition: 1s ease-in-out; 
+    }     
+    .navActive {
+      left: 71%;
+      position: absolute;
+      transition: 1s ease-in-out; 
+      z-index: 30;
       display: block;
-   }
-        .navActive {
-          opacity: 1;
-           left: 75%;
-         position: absolute;
-         transition: .5s ease-in-out; 
+      top: 79px;
+      }   
+      .slid{
+        transform: scale(1);
+      }  
+/* ////1111-22222 */
         
-         padding: 0px;
-       
-         z-index: 300;
-         display: block;
-         top: 80px;
-        
-        } 
-        #burger{
-          z-index: 1; 
-          position: fixed;
-          display: block;
-       }
-        #img{
-          position: absolute;
-          left: 52%;
-        }
-        #imeges{
-          display: grid;
-          
-          grid-template-rows: 650px 1400px 890px 820px 650px 420px;
-         padding: 0;
-         
-      }
-      #txt{
-        display: grid;
-        grid-template-columns:100%;
-  
-    }
-    #sprech{
-     width: 90%;
-     height: 300px;
-     margin: 10px auto;
-     line-height: 25px;
-     font-size: 18px;
-     letter-spacing: 1px;
-     word-spacing: 5px;
+#imeges{
+  display: grid;
+  grid-template-rows: 650px 1400px 890px 820px 650px 420px;
+  padding: 0;         
+}
      
-    }
-    #map{
-      display: grid;
-      width: 80%;
-      height: 250px;
-      right: 20px;
-      position: relative;
-    }
+  .text4{
+    margin: 10px 10px;
+    font-size: 16px;
+    display: grid;
+    color: rgb(192, 184, 184);
+    letter-spacing: 1px;
+    line-height: 25px;
+  }
+  
     #img1 {
     display: flex;
     flex-direction: column;
@@ -1000,22 +999,22 @@ nav{
   
   } 
   #im1{
-    left: 3%; 
+    left: 5%; 
     top: 20px; 
    
   }
   #im2{
-    right: 3%; 
+    right: 5%; 
     top: 290px; 
    
 }   
   #im3{
-    left: 3%;
+    left: 5%;
     top: 560px;
   
 }  
  #im4{
-     right:3%;
+     right:5%;
     top: 830px;
   
 }  
@@ -1023,7 +1022,68 @@ nav{
     left: 5%;
     top: 1100px;
    
-}  
+} 
+.model{
+  top: 0%;
+height: 100%;
+z-index: 300;
+}
+.imege1{
+  position:absolute;
+  width: 90%;
+  height: 18%;
+  border-radius: 8px;
+  top: 0%;
+display: flex;
+align-items: center;
+
+}
+
+.somImg .som1:nth-child(1)>.imege1{
+  top: 23%;
+  left: 20px;
+}
+.somImg .som1:nth-child(2)>.imege1{
+  top: 42%;
+  left: 20px;
+}
+.somImg .som1:nth-child(3)>.imege1{
+   left: 20px;
+   top: 61%;  
+}
+.somImg .som1:nth-child(4)>.imege1{
+ left:20px;
+ top: 80%;
+}
+.close{
+  position: absolute;
+  top: 5px;
+  right: 40px;
+  font-size: 40px;
+  color: rgb(252, 15, 86);
+  cursor: pointer;
+  font-weight: bold;
+}
+.img{
+  width: 0%;
+  height: 50%;
+  top: 32%;
+  position: absolute;
+}
+
+.txt1{
+    width: 100%;
+    display: block;
+    text-align: left;
+    color: wheat;
+    left: 0px;
+    top: 1%;
+    padding: 10px;
+    position: absolute;
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 24px;
+} 
     .hov{
 
       width: 90%;
@@ -1033,9 +1093,9 @@ nav{
     }
     
       .hov:hover{
-        z-index: 1;
-       width: 90%;
-        height: 290px; 
+          width: 90%;
+          height: 18%;
+        
       }
       #cont2{
 
@@ -1050,6 +1110,13 @@ nav{
         height: 300px;
         margin: auto;
          }
+         .next,.next1 {
+          right: 19px;
+          border-radius: 50px;
+        }
+        .prev,.prev1{
+          left: 19px;
+        }
          #cont3{
           display: grid;
             grid-template-columns: 100%;
@@ -1068,24 +1135,69 @@ nav{
             margin: auto;
           }
           .sliderImg4 {
-            width: 90%;
+            width: 100%;
              height: 300px;
             display: grid; 
           
-            right: 20px;
+            right: 21px;
              }
              
             #rotating{
-             bottom: 220px;
-              position: absolute;
-             left: 20%;
+              width: 100%;
+             bottom: 110px;
+              position:relative;
+          margin: auto;
+          left: 0px;
             }
             .flip{
-            
-             margin: auto;
+           position: absolute;
+          
               top:0px;
-              left: 100px;
+      
             }
+            .imgFl{
+              width: 400px;
+              height: 200px;
+            left: 1px;       
+            position: absolute;
+          }
+          .flip div{
+            position: absolute;
+            width:400px;
+            height: 200px;
+          }
+          .front{
+              transform: translateZ(200px);
+             
+          }
+          .back{
+              transform: rotateY(180deg) translateZ(200px);
+              padding: 0;
+           margin: 0;
+              
+          }
+          .left{
+              transform: rotateY(-90deg) translateX(-200px);
+             
+             transform-origin: left;
+             padding: 0;
+           margin: 0;
+          }
+        
+          .right{
+            transform: rotateY(90deg) translateX(200px);
+          
+           transform-origin: right;
+           padding: 0;
+           margin: 0;
+        }
+        .top{
+            transform: rotateX(-90deg) translateY(-200px);
+             top: 10px;
+           transform-origin: top;
+           padding: 0;
+           margin: 0;
+        }
 
 }
  
