--- a/css/news.css
+++ b/css/news.css
@@ -81,13 +81,11 @@ display: grid;
 }
 
 #res{
-
   display: grid;
   grid-template-columns:1fr 1fr 1fr ;
 padding: 100px;
   grid-gap: 80px;
   perspective: 800px;
-padding: 100px;
 }
 .mystyle {
 display: grid;
@@ -161,41 +159,32 @@ z-index: 10px;
 @media screen and (max-width:1050px){
   
   #res{
-    width: 100%;
     display: grid;
     grid-template-columns:1fr 1fr ;
-  padding: 50px;
+    padding: 40px;
     grid-gap: 20px;
-    perspective: 800px; 
   }
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:769px){
   
-  #res{
-    width: 100%;
+  #res{ 
     display: grid;
     grid-template-columns:1fr;
-  padding: 50px;
+    padding: 50px;
     grid-gap: 20px;
-    perspective: 800px; 
   }
   .navNews>ul{
-
     display: grid;
     grid-template-columns:1fr 1fr ;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    /* display: flex;
-    flex-direction: column; */
-    position: relative;
-    
   }
   .navNews>ul>li{
-   width: 180px;
+    width: 180px;
     font-size: 22px;
     background-color:rgba(6, 57, 88, 0.767);
-  padding: 5px;
+    padding: 5px;
   }
 
 }
@@ -209,105 +198,83 @@ z-index: 10px;
     margin: 0;
     box-sizing: border-box;
 }
-.nav{
-position: sticky;
-}
 .contNew{
-position: sticky;
-  width: 100%;
+
+  display: grid;
+  grid-template-rows: 60px 265px auto ;
+  grid-gap:  2px ;
+ 
+ padding: 2px;
 }
-.imgNews{
-  width: 50%;
+.nav{
+ position: sticky;
 }
 #img{
   position: relative;
-  left: 30%;
+  left: 0%;
 }
-.navNews{
-  width: 20px;
-  
-  top: 80px;
-  display: grid;
-}
-.navNews>ul{
 
+.navNews>ul{
+  width: 50%;
   display: grid;
-  grid-template-columns:1fr  ;
+  grid-template-columns:1fr 1fr  ;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  /* display: flex;
-  flex-direction: column; */
+  margin-top: 8px;
+  left: 15px;
   position: relative;
-  
 }
 .navNews>ul>li{
- width: 150px;
-  font-size: 20px;
+  width: 120px;
+  font-size: 18px;
   background-color:rgba(6, 57, 88, 0.767);
-padding: px;
+  margin: 5px;
 }
-.contNew{
-
+nav>ul{
+  width: 20%;
+  top: 1PX;
+  left: 100%;
+  height: 50vh;
+  position: relative;   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: .5s ease-in-out;   
+  display: none;
+}   
+nav>ul a{
+  padding: 0px;
+  position: relative;
+}
+#burger{
+  z-index: 1; 
+  position: fixed;
+  display: block;
+}
+.navActive {         
+  opacity: 1;
+  left: 5%;
+  position: absolute;
+  top: 50px;
+  display: block;
+} 
+ #res{
   display: grid;
-  grid-template-rows: 60px 310px auto ;
-  grid-gap:  0px ;
- 
- padding: 0px;
-
+  grid-template-columns:1fr  ;
+  padding: 1%;
+  grid-gap: 30px;  
 }
-    nav>ul{
-    width: 20%;
-      top: 1PX;
-   left: 100%;
-       height: 50vh;
-       position: relative;
-      
-       display: flex;
-       flex-direction: column;
-         align-items: center;
-         transition: .5s ease-in-out;   
-     display: none;
-    }   
-    nav>ul a{
-      padding: 0px;
-      position: relative;
-    }
-   #burger{
-      z-index: 1; 
-      position: fixed;
-      display: block;
-   }
-         .navActive {
-          
-          opacity: 1;
-          left: 5%;
-         position: absolute;
-         top: 50px;
-         display: block;
-        } 
-        #res{
-          display: grid;
-          grid-template-columns:1fr  ;
-        padding: 10%;
-          grid-gap: 0px;
-          perspective: 800px; 
-         
-        }
-        .mystyle {
-        display: grid;
-      
-          background-color:rgba(6, 57, 88, 0.932);
-        color:white;
-          box-shadow: 7px 10px 5px rgba(6, 57, 88, 0.664),-5px -5px  rgba(3, 54, 85, 0.534);
-        margin: auto;
-           list-style-type: none; 
-         padding: 20px;
-          font-size: 22px;
-          line-height: 25px;
-          transition: all 0.5s;
-          
-        }
+.mystyle {
+  display: grid;    
+  background-color:rgba(6, 57, 88, 0.932);
+  color:white;
+  box-shadow: 7px 10px 5px rgba(6, 57, 88, 0.664),-5px -5px  rgba(3, 54, 85, 0.534);
+  margin: auto;
+  list-style-type: none; 
+  padding: 20px;
+  font-size: 22px;
+  line-height: 25px;
+  transition: all 0.5s;       
+}
 
 
 }
