--- a/css/abaut.css
+++ b/css/abaut.css
@@ -500,7 +500,7 @@ padding-top:12px ;
 @media screen and (max-width:650px){ 
   #contAbaut{
     width: 100%;
-    height: 160%;
+    height: 180vh;
     position: absolute;
     overflow: hidden;
     
@@ -521,10 +521,34 @@ padding-top:12px ;
       display: flex;
       justify-content: center;
   }
+  .textAb{
+    top: 55px;
+    width: 90%;
+    position: absolute;
+    margin: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    transform: scale(0);
+
+}
   .textAb .p ,.p1{
-    line-height: 30px;
+    line-height: 25px;
     letter-spacing:0px ;
-    color: rgb(253, 250, 245);    
+    color: rgb(253, 250, 245);   
+   
+}
+.icon-bar{
+  width: 100%;
+ 
+  display: flex;
+   justify-content: space-around; 
+  align-items: center;
+  margin: 0 ;
+ left: 5%;
+bottom: 190px;
+position:absolute;
+transform: translateX(200%);
+transition:1s ease-in-out;
 }
 .icon-bar a {
 
@@ -533,8 +557,8 @@ padding-top:12px ;
     padding: 10px;
     transition: all 0.3s ease;
     color: white;
-    margin: 10px;
-    font-size:40px;
+    margin: 5px;
+    font-size:30px;
     transition:1s ease-in-out;
   }
   input,textarea{  
@@ -546,5 +570,41 @@ padding-top:12px ;
    position: relative;
       border-bottom: 2px solid rgb(243, 243, 245);
   }
+  #name{
+    position: absolute;
+    display: flex;
+   display: block;
+  bottom: 50px;
+  left: 50px;
+  transform: scale(0);
+  transition:2s ease-in-out;
+}
+#name h4{
+    padding: 5px;
+    font-size: 18px;
+    color: ivory;
+    
+}
 
+}
+@media screen and (max-width:375px){ 
+  #contAbaut{
+    width: 100%;
+    height: 200vh;
+    }
+    #name{
+    
+      bottom: 10px;
+      left: 50px;
+    }
+}
+@media screen and (max-width:320px){ 
+  #contAbaut{
+    width: 100%;
+    height: 220vh;
+    }
+    .textAb{
+      font-size: 18px;
+  }
+  
 }
